move the html file to templates folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1 class="display-title flex">This webpage displays random picture of cats</h1>
+    <main>
+        <div class="image-container">
+            
+        </div>
+    </main>
 </body>
 </html>
