--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css"/>
-    <title>Document</title>
-</head>
-<body>
-    <h1 class="display-title flex">This webpage displays random picture of cats</h1>
+{% extends "base_template.html" %}
+
+{% block body %}
+    <header>
+        <h2 class="display-title">The pet of the moment</h2>
+    </header>
     <main>
-        <div class="image-container">
-            
+        <div class="img-container">
+            <img src= "{{mg}}"/>
         </div>
     </main>
-</body>
-</html>
+
+{% endblock %}
