--- a/static/index.css
+++ b/static/index.css
@@ -44,8 +44,19 @@ picture {
 }
 
 .display-title {
-  margin-top: .75rem;
-  font-size: 1.5rem;
-  font-family: 'Courier New', Courier, monospace;
-  align-items: center;
+  text-transform: uppercase;
+  margin-top: 2rem;
+  min-width: 5rem;
+  min-height: 1rem;
+  margin-inline: auto;
+  background-color: whitesmoke;
+}
+
+.img-container {
+  max-width: 32rem;
+  margin: 9rem auto;
+  border: 1.25rem solid white;
+  padding: 0.75rem;
+  text-align: center;
+  background-color: blue;
 }
