--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cat or dog</title>
+    <link rel="stylesheet" href="../static/index.css"/>
+    <title>{{title}}</title>
 </head>
 <body>
     {% block body %}
-        
-    {% end block %}
+
+    {% endblock %}
 </body>
 </html>
