--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block body %}
     <header>
-        <h2 class="display-title">The pet of the moment</h2>
+        <h2 class="display-title flex">The pet of the moment</h2>
     </header>
     <main>
         <div class="img-container">
-            <img src= "{{mg}}"/>
+            <img src= "{{mg}}" alt="image of either a cat or dog"/>
         </div>
     </main>
 
