--- a/static/index.css
+++ b/static/index.css
@@ -53,9 +53,17 @@ picture {
 
 .img-container {
   max-width: 40rem;
-  min-height: 30rem;
+  min-height: 20rem;
   margin: 5rem auto;
-  border: 1rem solid paleturquoise;
+  border: .5rem solid whitesmoke;
   border-radius: .5rem;
   padding: 0.1rem;
 }
+
+.attribution-container {
+  min-width: 30rem;
+  min-height: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+}
+
