add footer for attribution to the displayed images

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,14 @@
 
 {% block body %}
     <header>
-        <h2 class="display-title flex">The pet of the moment</h2>
+        <h2 class="display-title flex">The pet. Cat or Dog? The human knows, what about the machine?</h2>
     </header>
     <main>
         <div class="img-container">
             <img src= "{{mg}}" alt="image of either a cat or dog"/>
         </div>
     </main>
-
+    <footer class="attribution-container flex">
+        <p>Image attribution: The images are from <a href="pexels.com">pexels</a>, Click to view some them.</p>
+    </footer>
 {% endblock %}
