add the prediction spot

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
         <div class="img-container">
             <img src= "{{mg}}" alt="image of either a cat or dog"/>
         </div>
+        <div class="prediction-container flex">
+            <p>{{prediction}}</p>
+        </div>
     </main>
     <footer class="attribution-container flex">
         <p>Image attribution: The images are from <a href="pexels.com">pexels</a>, Click to view some them.</p>
